gap fix

--- a/static/source/stylesheets/components/_swiper.scss
+++ b/static/source/stylesheets/components/_swiper.scss
@@ -43,7 +43,6 @@
     font-size: 18px;
     background: #ffffff;
 	width: auto;
-	padding-right: 1px;
 	
 	img{
 
